<resources>
    <string name="bringing_nike_members_the_best_products_inspiration_and_stories_in_spot">Bringing Nike Members the best products,\ninspiration and stories in spot.</string>
    <string name="sign_in">Sign In</string>
    <string name="join_us">Join Us</string>
    <string name="by_continuing_i_agree_to_nike_s_n_privacy_policy_abd_terms_of_nuse">By continuing, I agree to Nike\'s\n<u>Privacy Policy</u> abd <u>Terms of</u>\n<u>Use</u></string>
    <string name="edit"><u>Edit</u></string>
    <string name="forgotten_your_password"><u>Forgotten your password?</u></string>
    <string name="i_agree_to_nike_s_n_u_privacy_policy_u_and_u_terms_of_u_n_u_use_u">I agree to Nike\'s\n<u><b>Privacy Policy</b></u> and <u><b>Terms of</b></u>\n<u><b>Use</b></u></string>
    <string name="enter_your_email_to_njoin_us_or_sign_in">Enter your email to \njoin us or sign in</string>
    <string name="continue_text">Continue</string>
    <string name="what_s_your_npassword">What\'s your \npassword?</string>
    <string name="nguyenquangminh570_gmail_com">nguyenquangminh570@gmail.com</string>
    <string name="password">Password</string>
    <string name="now_let_s_make_you_nnike_member">Now let\'s make you \nNike Member.</string>
    <string name="sign_up_for_emails_to_get_updates_nfrom_nike_on_products_offers_nand_your_meber_benefits">Sign up for emails to get updates\nfrom Nike on products, offers\nand your Meber benefits.</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
      <string name="nike">Nike</string>
    <string name="search">Search shoes?</string>
</resources>