<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.AuthActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/bringing_nike_members_the_best_products_inspiration_and_stories_in_spot"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_iv" />

        <Button
            android:id="@+id/join_us_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/black_button"
            android:backgroundTint="@null"
            android:text="@string/join_us"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_tv"
            app:layout_constraintTop_toBottomOf="@+id/text_tv" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/white_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/join_us_btn"
            app:layout_constraintTop_toTopOf="@+id/join_us_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>